Add deleteAll endpoint to book module to optionally delete the data from book database
